bin/edu/itsco/Parser.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{  static = true;}PARSER_BEGIN(Parser)package edu.itsco;

public class Parser{  public static void main(String args []) throws ParseException  {    Parser parser = new Parser(System.in);   System.out.println ("bienvenidos al COMPILADOR");
   System.out.println ("----------------------------------------------");
   Parser.principal();
   System.out.println ("EL PROGRAMA SE COMPILO CORRECTAMENTE");      }}PARSER_END(Parser)SKIP :{  " "| "\r"| "\t"| "\n"}TOKEN: {
  < INICIO : "program" >
| < FIN : "end" >
| < VAR : "var" >
| < INT : "int" >
| < STRING : "string" >
| < FLOAT : "float" > 
 
| < PRINT : "print" >
| < INPUT : "input" > 
 
| < IF : "if" >
| < ENTONCES : ":" >
| < ELSE : "else" > 
 
| < FOR : "for" >
| < IN : "in" > 
 
 
| < WHILE : "while" >
| < DO : "do">  
}
TOKEN:{

< SUM : "+" >
| < REST : "-" >
| < MULT : "*" >
| < DIV : "/" >
| < MOD : "%" >
| < POT : "^" >
| < IGUAL: "="> 
 
| < MAYOR : ">" >
| < MENOR : "<" > 
 
| < AND : "&&" >
| < OR : "||" >
| < NOT : "!" > 
 
| < AP: "(" >
| < CP: ")" >
| < AC: "[" >
| < CC: "]"> 
}
TOKEN:{
 <#digito: ["0"-"9"] >
 | <#letra: ["a"-"z","A"-"Z"] > 

 | <VALOR_INT: (<digito >)+ >
 | <VALOR_FLOAT: (< digito >)+"."(< digito >)+ >
 | <VALOR_STRING:("\'" (~["\'"])+ "\'") | ("\"" (~["\""])+ "\"") >  
 
| <ID: ("_" | <letra >) ("_"|<letra >|<digito >)* >
} 

void principal (): {}
{
   < INICIO >  <ID >
      (        sentencias()
      )+
   < FIN >  
}

void sentencias(): { }
{
        declararVariable () 
}

void declararVariable(): { }
{
    < VAR >  <ID> TipoDato() [ <IGUAL > valor()] 
}

void TipoDato(): { }
{
  < INT > | < STRING > | < FLOAT >
}

void valor(): { }
{
  < VALOR_STRING > | < VALOR_INT > | < VALOR_FLOAT > | < ID >
}
  

       
  
